--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
             <i class="fas fa-utensils"></i> Recipes
             <i class="fas fa-utensils"></i>
           </div>
-          <% if (locals.allRestaurants) { %>
+          <% if (locals.allRecipes) { %>
           <div class="table-container">
             <table class="table is-bordered is-hoverable is-striped is-narrow">
               <thead>
@@ -31,25 +31,21 @@
                   <th>&nbsp;</th>
                 </tr>
               </thead>
-              <% let i=0; %> <% for(i=0; i < allRestaurants.length; i++) { %>
+              <% let i=0; %> <% for(i=0; i < allRecipes.length; i++) { %>
               <tr>
-                <td><%= allRestaurants[i].name %></td>
-                <td><%= allRestaurants[i].description %></td>
-                <td><%= allRestaurants[i].description %></td>
-                <td><%= allRestaurants[i].description %></td>
+                <td><%= allRecipes[i].name %></td>
+                <td><%= allRecipes[i].description %></td>
+                <td><%= allRecipes[i].description %></td>
+                <td><%= allRecipes[i].description %></td>
 
                 <td class="has-text-centered">
-                  <a
-                    href="/showReviews?id=<%= allRestaurants[i].restaurant_id %>"
-                  >
+                  <a href="/showReviews?id=<%= allRecipes[i].recipe_id %>">
                     <span class="icon is-small">
                       <i class="fas fa-utensils"></i> </span
                   ></a>
                 </td>
                 <td class="has-text-centered">
-                  <a
-                    href="/deleteRestaurant?id=<%= allRestaurants[i].restaurant_id %>"
-                  >
+                  <a href="/deleteRecipe?id=<%= allRecipes[i].recipe_id %>">
                     <span class="icon is-small">
                       <i class="fas fa-trash-alt"></i> </span
                   ></a>
@@ -58,17 +54,17 @@
               <% } %>
               <tfoot>
                 <tr>
-                  <td colspan="6">There are <%= i %> restaurants.</td>
+                  <td colspan="6">There are <%= i %> recipes.</td>
                 </tr>
               </tfoot>
             </table>
           </div>
           <% } %>
 
-          <form action="addRestaurant" id="restaurant-form" method="post">
+          <form action="addRecipe" id="recipe-form" method="post">
             <div class="field is-horizontal">
               <div class="field-label is-normal">
-                <label class="label">Add New Restaurant</label>
+                <label class="label">Add New Recipe</label>
               </div>
               <div class="field-body">
                 <div class="field">
@@ -77,7 +73,7 @@
                       name="name"
                       class="input"
                       type="text"
-                      placeholder="Restaurant Name"
+                      placeholder="Recipe Name"
                       required
                     />
                   </p>
@@ -88,7 +84,7 @@
                       name="description"
                       class="input"
                       type="text"
-                      form="restaurant-form"
+                      form="recipe-form"
                       placeholder="Description"
                       required
                     ></textarea>
