--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
                 <td><%= allRecipes[i].description %></td>
 
                 <td class="has-text-centered">
-                  <a href="/showReviews?id=<%= allRecipes[i].recipe_id %>">
+                  <a href="/showIngredients?id=<%= allRecipes[i].recipe_id %>">
                     <span class="icon is-small">
                       <i class="fas fa-utensils"></i> </span
                   ></a>
